# pyfemop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: gmsh_hole_plate_creep.geo  gmsh_hole_plate_creep_alt.geo  gmsh_script.geo  gmsh_script_3d_gpa.geo  gmsh_script_3d_gpa_3p_drawing.geo  gmsh_script_3d_gpa_alt.geo  gmsh_script_3d_gpa_xy.geo  gmsh_script_3d_gpa_xy_drawing.geo  gmsh_script_3d_gpa_xy_full.geo  gmsh_script_mod.geo  test_mesh.msh
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
examples/: arg_dev.py  cost_func_dev.py  creep_mesh_test_dev.i  creep_mesh_test_dev_gpa.i  creep_mesh_test_dev_gpa_hole_plate.i  creep_mesh_test_dev_gpa_out.csv  ex1_Linear_Elastic.txt  ex1_elastic_modulus_opt.py  ex2_simple_geometry_opt.py  ex3_visualisation.py  ex4_dice_filter_test.py  gmsh_update.py  test_exodus_reader.py  test_mesh.msh  test_moose_read.py  test_run.py  test_sens_opt.py  unconverged.csv  yaml_dev.py  yaml_test.yaml
examples/Runs/: Example_Run
examples/scripts/: ex1_linear_elastic.i  ex2_simple_geometry.i  gmsh_2d_simple_geom.geo  gmsh_2d_simple_geom_side.geo  mesh_simple_geom.msh
examples/sim-workdir-1/: output-key-11.json  sim-124.i  sim-128.i  sim-129.i  sweep-vars-11.json
examples/sim-workdir-2/: sim-121.i  sim-125.i
examples/sim-workdir-3/: sim-122.i  sim-126.i  sim-131.i  sim-132.i
src/pyfemop/: __init__.py
tests/: test_costfunctions.py  test_filemanager.py  test_gmshutils.py  test_mtgo.py  test_optimisationmanager.py  test_optimizationmanager.py  test_outputreaders.py  test_st_curve.py
(+24 files in other folders)
